<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.report.ReportFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bungee"
        android:text="Click to see more details!"
        android:textColor="@color/primary_blue"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/stepRowToday"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/stepRowToday"
        android:layout_width="330dp"
        android:layout_height="0dp"
        android:layout_marginTop="-8dp"
        android:background="@drawable/report_background_curve"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <TextView
            android:id="@+id/todayStepTitle"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bungee"
            android:paddingHorizontal="25dp"
            android:paddingVertical="5dp"
            android:text="@string/today_step_title"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/numberTodayStep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/rock_salt"
            android:paddingRight="25dp"
            android:text="6899"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/stepRowWeek"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/report_background_curve"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stepRowToday">

        <TextView
            android:id="@+id/weekStepTitle"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bungee"
            android:paddingHorizontal="25dp"
            android:paddingVertical="5dp"
            android:text="@string/week_step_title"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/numberWeekSteps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/rock_salt"
            android:paddingRight="25dp"
            android:text="324567"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/stepRowTotal"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/report_background_curve"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stepRowWeek">

        <TextView
            android:id="@+id/totalStepTitle"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bungee"
            android:paddingHorizontal="25dp"
            android:paddingVertical="5dp"
            android:text="@string/monthly_step_title"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/numberMonthStep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/rock_salt"
            android:paddingRight="25dp"
            android:text="6624567"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>